--- a/.github/workflows/mpvbuild.yml
+++ b/.github/workflows/mpvbuild.yml
@@ -86,7 +86,7 @@ jobs:
     steps:      
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '11.7'
+          xcode-version: latest
         
       - name: prepare dependencies
         run: |
