--- a/.github/workflows/clang-for-windows.yml
+++ b/.github/workflows/clang-for-windows.yml
@@ -16,10 +16,10 @@ jobs:
       matrix:
         include:
           - msvc_arch: x64
-            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-13.0.0/LLVM-13.0.0-win64.exe
+            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-13.0.1-rc3/LLVM-13.0.1-rc3-win64.exe
             compiler: clang-cl
           - msvc_arch: x86
-            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-13.0.0/LLVM-13.0.0-win32.exe
+            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-13.0.1-rc3/LLVM-13.0.1-rc3-win32.exe
             compiler: clang-cl
     env:
       targetName: llvm-win-${{ matrix.msvc_arch }}
