--- a/.github/workflows/clang-for-windows.yml
+++ b/.github/workflows/clang-for-windows.yml
@@ -38,7 +38,8 @@ jobs:
         run: |
           git clone --depth=1 https://github.com/llvm/llvm-project.git
           cd llvm-project
-          git apply ..\clang4win.patch
+          curl -sL -o clang4win.patch https://github.com/missdeer/daily-weekly-build/raw/master/clang4win.patch
+          git apply clang4win.patch
 
       - name: build-msvc
         shell: cmd
