--- a/.github/workflows/mpvbuild.yml
+++ b/.github/workflows/mpvbuild.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Set up Go 
         uses: actions/setup-go@v2
         with:
-          go-version: 1.17
+          go-version: 1.18
         id: go
 
       - name: Build transfer command
@@ -112,10 +112,10 @@ jobs:
           path: ios/lib
           name: mpv-ios-${{ matrix.target }}
 
-      - name: Set up Go 1.17
+      - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.17
+          go-version: 1.18
         id: go
 
       - name: Build transfer command
@@ -165,10 +165,9 @@ jobs:
           path: android/prefix/${{ matrix.target }}/lib/
           name: mpv-android-${{ matrix.target }}
 
-      - name: Set up Go 1.17
-        uses: actions/setup-go@v2
+      - name: Set up Go
         with:
-          go-version: 1.17
+          go-version: 1.18
         id: go
 
       - name: Build transfer command
