--- a/.github/workflows/mpvbuild.yml
+++ b/.github/workflows/mpvbuild.yml
@@ -166,6 +166,7 @@ jobs:
           name: mpv-android-${{ matrix.target }}
 
       - name: Set up Go
+        uses: actions/setup-go@v2
         with:
           go-version: 1.18
         id: go
