--- a/.github/workflows/clang-for-windows.yml
+++ b/.github/workflows/clang-for-windows.yml
@@ -9,17 +9,13 @@ on:
     paths:
       - '.github/workflows/clang-for-windows.yml'
 jobs:
-  build:
-    name: Build
-    runs-on: windows-2019
+  clang-for-windows-bootstrap:
+    runs-on: windows-latest
     strategy:
       matrix:
         include:
           - msvc_arch: x64
-            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-13.0.1/LLVM-13.0.1-win64.exe
-            compiler: clang-cl
-          - msvc_arch: x86
-            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-13.0.1/LLVM-13.0.1-win32.exe
+            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-14.0.4/LLVM-14.0.4-win64.exe
             compiler: clang-cl
     env:
       targetName: llvm-win-${{ matrix.msvc_arch }}
@@ -36,7 +32,7 @@ jobs:
       - name: Checkout llvm-project
         shell: cmd
         run: |
-          git clone --depth=1 https://github.com/llvm/llvm-project.git
+          git clone --depth=1 --single-branch --branch main https://github.com/llvm/llvm-project.git
           cd llvm-project
           curl -sL -o clang4win.patch https://github.com/missdeer/daily-weekly-build/raw/master/clang4win.patch
           git apply clang4win.patch
@@ -46,7 +42,7 @@ jobs:
         env:
           vc_arch: ${{ matrix.msvc_arch }}
         run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vc_arch%
+          call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vc_arch%
           set PATH=%CD%\llvm\bin;%PATH%
           mkdir -p llvm-project\build
           cd llvm-project\build
