--- a/.github/workflows/mpvbuild.yml
+++ b/.github/workflows/mpvbuild.yml
@@ -20,15 +20,34 @@ jobs:
         mingw_arch: [MINGW64, MINGW32]
         include:
           - mingw_arch: MINGW64
+            c: gcc
+            cxx: g++
             mingw_prefix: mingw-w64-x86_64
           - mingw_arch: MINGW32
+            c: gcc
+            cxx: g++
             mingw_prefix: mingw-w64-i686
     steps: 
       - uses: msys2/setup-msys2@v2
         with:
           update: true
           msystem: ${{ matrix.mingw_arch }}
-          install: python ${{ matrix.mingw_prefix }}-pkg-config ${{ matrix.mingw_prefix }}-python3 ${{ matrix.mingw_prefix }}-gcc ${{ matrix.mingw_prefix }}-ffmpeg ${{ matrix.mingw_prefix }}-libjpeg-turbo ${{ matrix.mingw_prefix }}-lua51
+          install: python ${{ matrix.mingw_prefix }}-qt5 ${{ matrix.mingw_prefix }}-pkg-config ${{ matrix.mingw_prefix }}-python3 ${{ matrix.mingw_prefix }}-gcc ${{ matrix.mingw_prefix }}-ffmpeg ${{ matrix.mingw_prefix }}-libjpeg-turbo ${{ matrix.mingw_prefix }}-lua51
+          
+      - run: |
+          git clone https://github.com/missdeer/mingwdeployqt.git
+          
+      - name: Build mingwdeployqt
+        shell: msys2 {0}
+        run: |
+          cd mingwdeployqt
+          mkdir build
+          cd build
+          env PATH=$PATH:/${{ matrix.mingw_arch }}/bin cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=${{ matrix.c }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx }} -G Ninja ..
+          ninja
+          cp mingwdeployqt.exe /${{ matrix.mingw_arch }}/bin/
+          cd ../..
+          
       - name: checkout mpv
         run: |
           git clone --depth=1 https://github.com/mpv-player/mpv.git
@@ -43,10 +62,9 @@ jobs:
           mkdir binary
           cp mpv/build/mpv* binary/
           export BINARY=$PWD/binary
-          cd /${{ matrix.mingw_arch }}/bin/
-          cp zlib1.dll xvidcore.dll swscale*.dll swresample*.dll sdl2.dll postproc*.dll lua51.dll libzstd.dll libxml2*.dll libx265.dll libx264*.dll libwinpthread*.dll libwebp*.dll libvpx*.dll libvorbis*.dll libunistring*.dll libtasn1*.dll libstdc++*.dll libsrt.dll libspeex*.dll librtmp*.dll libpng16*.dll libpcre*.dll libp11-kit*.dll libopus*.dll libopenjp2*.dll libopencore-amrwb*.dll libopencore-amrnb*.dll libopenal*.dll libogg*.dll libnettle*.dll libmp3lame*.dll libmodplug*.dll libmfx*.dll liblzma*.dll liblz4.dll liblcms2*.dll libjpeg*.dll libintl*.dll libidn2*.dll libiconv*.dll libhogweed*.dll libharfbuzz*.dll libgsm.dll libgraphite2.dll libgnutls*.dll libgmp*.dll libglib-2.0*.dll libgcc_s_*.dll libfribidi*.dll libfreetype*.dll libfontconfig*.dll libffi*.dll libexpat*.dll libdav1d.dll libcrypto-1_1*.dll libcaca*.dll libbz2*.dll libbrotlidec.dll libbrotlicommon.dll libbluray*.dll libass*.dll libarchive*.dll libaom.dll avutil*.dll avformat*.dll avfilter*.dll avdevice*.dll avcodec*.dll $BINARY/
-          cd -
-          
+          env PATH=$PATH:/${{ matrix.mingw_arch }}/bin /${{ matrix.mingw_arch }}/bin/mingwdeployqt.exe $PWD/binary/mpv.exe
+          find $PWD/binary -name 'mpv*.dll' -type f -exec env PATH=$PATH:/${{ matrix.mingw_arch }}/bin /${{ matrix.mingw_arch }}/bin/mingwdeployqt.exe {} \;
+                    
       - name: upload artifact
         uses: actions/upload-artifact@v1
         with:
