--- a/.github/workflows/mpvbuild.yml
+++ b/.github/workflows/mpvbuild.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           update: true
           msystem: ${{ matrix.mingw_arch }}
-          install: python ${{ matrix.mingw_prefix }}-qt5 ${{ matrix.mingw_prefix }}-cmake ${{ matrix.mingw_prefix }}-pkg-config ${{ matrix.mingw_prefix }}-python3 ${{ matrix.mingw_prefix }}-gcc ${{ matrix.mingw_prefix }}-ffmpeg ${{ matrix.mingw_prefix }}-libjpeg-turbo ${{ matrix.mingw_prefix }}-lua51
+          install: python ${{ matrix.mingw_prefix }}-qt5 ${{ matrix.mingw_prefix }}-cmake ${{ matrix.mingw_prefix }}-pkg-config ${{ matrix.mingw_prefix }}-python3 ${{ matrix.mingw_prefix }}-gcc ${{ matrix.mingw_prefix }}-ffmpeg ${{ matrix.mingw_prefix }}-libjpeg-turbo ${{ matrix.mingw_prefix }}-lua51 ${{ matrix.mingw_prefix }}-meson
           
       - run: |
           git clone https://github.com/missdeer/mingwdeployqt.git
@@ -62,15 +62,14 @@ jobs:
         shell: msys2 {0}
         run: |
           cd mpv
-          /${{ matrix.mingw_arch }}/bin/python3.exe ./bootstrap.py
-          env PATH=$PATH:/${{ matrix.mingw_arch }}/bin ./waf configure CC=${{ matrix.c }}.exe --check-c-compiler=${{ matrix.c }} --enable-libmpv-shared
-          env PATH=$PATH:/${{ matrix.mingw_arch }}/bin ./waf build      
+          env PATH=/${{ matrix.mingw_arch }}/bin/ meson setup build --prefix=/${{ matrix.mingw_arch }} -Dlibmpv=true
+          env PATH=/${{ matrix.mingw_arch }}/bin/ meson compile -C build
           cd ..
           mkdir binary
-          cp mpv/build/mpv* binary/
+          cp mpv/build/*mpv* binary/
           export BINARY=$PWD/binary
           env PATH=$PATH:/${{ matrix.mingw_arch }}/bin /${{ matrix.mingw_arch }}/bin/mingwdeployqt.exe $PWD/binary/mpv.exe
-          find $PWD/binary -name 'mpv*.dll' -type f -exec env PATH=$PATH:/${{ matrix.mingw_arch }}/bin /${{ matrix.mingw_arch }}/bin/mingwdeployqt.exe {} \;
+          find $PWD/binary -name '*mpv*.dll' -type f -exec env PATH=$PATH:/${{ matrix.mingw_arch }}/bin /${{ matrix.mingw_arch }}/bin/mingwdeployqt.exe {} \;
                     
       - name: upload artifact
         uses: actions/upload-artifact@v1
