--- a/.github/workflows/mpvbuild.yml
+++ b/.github/workflows/mpvbuild.yml
@@ -67,7 +67,8 @@ jobs:
           cd ..
           mkdir binary
           cp mpv/build/mpv.exe binary/
-          cp mpv/build/libmpv*.dll* binary/
+          cp mpv/build/libmpv.dll.a binary/
+          cp mpv/build/libmpv*.dll binary/
           export BINARY=$PWD/binary
           env PATH=$PATH:/${{ matrix.mingw_arch }}/bin /${{ matrix.mingw_arch }}/bin/mingwdeployqt.exe $PWD/binary/mpv.exe
           find $PWD/binary -name '*mpv*.dll' -type f -exec env PATH=$PATH:/${{ matrix.mingw_arch }}/bin /${{ matrix.mingw_arch }}/bin/mingwdeployqt.exe {} \;
