--- a/.github/workflows/mpvbuild.yml
+++ b/.github/workflows/mpvbuild.yml
@@ -22,18 +22,14 @@ jobs:
             c: gcc
             cxx: g++
             mingw_prefix: mingw-w64-ucrt-x86_64
-          - mingw_arch: MINGW32
+          - mingw_arch: MINGW64
             c: gcc
             cxx: g++
-            mingw_prefix: mingw-w64-i686
+            mingw_prefix: mingw-w64-x86_64
           - mingw_arch: CLANG64
             c: clang
             cxx: clang++
             mingw_prefix: mingw-w64-clang-x86_64
-          - mingw_arch: CLANG32
-            c: clang
-            cxx: clang++
-            mingw_prefix: mingw-w64-clang-i686
     steps: 
       - uses: msys2/setup-msys2@v2
         with:
