--- a/notepad2/CMakeLists.txt
+++ b/notepad2/CMakeLists.txt
@@ -14,9 +14,9 @@ if(NOT NOAVX2 AND NOT CMAKE_BUILD_TYPE MATCHES Debug)
         if( ${CMAKE_CXX_COMPILER_ID} STREQUAL "IntelLLVM")
             add_compile_options("/QxCORE-AVX2" "-O3" "-mavx2")
         elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
-            add_compile_options("-O3" "-mavx2" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe")
+            add_compile_options("-mavx2" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe")
         elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
-            add_compile_options( "-O3" "-mavx2" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe")
+            add_compile_options("-mavx2" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe")
         else()
             add_compile_options("/Ot" "/fp:fast" "/Gv" "/O2" "/arch:AVX2")
         endif()
@@ -70,7 +70,9 @@ file(GLOB
         scintilla/win32/*.cxx
         )
 
+if (msvc)
 set (CMAKE_EXE_LINKER_FLAGS /MANIFEST:NO )
+endif (msvc)
 add_executable(${PROJECT_NAME} ${EditLexers} ${src} ${lexlib} ${lexers} ${scintilla} ${win32} src/Notepad2.rc)
 target_link_libraries(${PROJECT_NAME} PRIVATE comctl32 shlwapi imm32 uxtheme)
 set_target_properties(${PROJECT_NAME} PROPERTIES WIN32_EXECUTABLE ON)
